tree-sitter-stil/test/corpus/basic.txt
================================================================================
Minimal valid STIL file
================================================================================

STIL 1.0;

--------------------------------------------------------------------------------

(source_file)

================================================================================
Signals block
================================================================================

STIL 1.0;
Signals {
  clk In;
  data Out;
}

--------------------------------------------------------------------------------

(source_file
  (top_level_block
    (signals_block
      (signal_def
        (name)
        (signal_dir))
      (signal_def
        (name)
        (signal_dir)))))

================================================================================
SignalGroups block
================================================================================

STIL 1.0;
SignalGroups {
  all = 'clk+data';
}

--------------------------------------------------------------------------------

(source_file
  (top_level_block
    (signalgroups_block
      (sg_def
        (name)
        (sigref_expr)))))

================================================================================
Annotation
================================================================================

STIL 1.0;
Ann {* note *}

--------------------------------------------------------------------------------

(source_file
  (top_level_block
    (ann_stmt
      (ann_body))))

================================================================================
Spec and Selector
================================================================================

STIL 1.0;
Spec s1 {
  Category fast {
    t1 = '50ns';
  }
}
Selector sel1 {
  t1 Typ;
}

--------------------------------------------------------------------------------

(source_file
  (top_level_block
    (spec_block
      (name)
      (spec_entry
        (name)
        (spec_var_def
          (name)
          (time_expr)))))
  (top_level_block
    (selector_block
      (name)
      (selector_entry
        (name)
        (selector_value)))))
